# Pduut

./: .gitignore  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  advanced_ocr.py  app.py  batch_processor.py  equation_detector.py  export_manager.py  image_extractor.py  ocr_engine.py  pdf_processor.py  pyproject.toml  replit.md  requirements.txt  table_detector.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: config.toml
