# This app is NOT a Python package. This pyproject.toml exists only to satisfy
# environments that expect the file to be present. It intentionally avoids any
# [build-system] or [project] tables so packaging tools do not attempt to build/install.

[tool.streamlit]
# Harmless tool section to keep the file valid but inert for packaging.
# (Streamlit Cloud ignores this; deploy uses requirements.txt and packages.txt.)
serverAddress = "0.0.0.0"
