[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Minimal PEP 621 [project] table to satisfy tools expecting it.
[project]
name = "pduut-app"
version = "0.1.0"
description = "PDUUT Streamlit application (app-only, not a library)."
requires-python = ">=3.11"
authors = [{ name = "Mohsin Raja" }]

# Configure setuptools to build an empty wheel (no packages/modules), so
# `pip install .` succeeds without trying to package app code.
[tool.setuptools]
packages = []
py-modules = []
